An error caused by a lack of GSA meal data now has a proper error message. Pinned "moment" version in AngularJS for simplicity. fixes #18996 refs #16511